<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.automation</groupId>
    <artifactId>selenium-java-cucumber-bdd-junit</artifactId>
    <version>1.0-SNAPSHOT</version>

    <dependencies>
        <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
		<dependency>
    		<groupId>org.seleniumhq.selenium</groupId>
    		<artifactId>selenium-java</artifactId>
    		<version>3.141.59</version>
		</dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
		<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-java</artifactId>
    		<version>6.9.1</version>
		</dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-junit -->
		<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-junit</artifactId>
    		<version>6.9.1</version>
    		<scope>test</scope>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-core -->
		<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-core</artifactId>
    		<version>6.9.1</version>
		</dependency>

        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
		<dependency>
    		<groupId>io.cucumber</groupId>
    		<artifactId>cucumber-jvm</artifactId>
    		<version>6.9.1</version>
    		<type>pom</type>
		</dependency>
        
        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm-deps -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-jvm-deps</artifactId>
            <version>1.0.6</version>
            <scope>provided</scope>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/com.github.temyers/cucumber-jvm-parallel-plugin -->
        <dependency>
            <groupId>com.github.temyers</groupId>
            <artifactId>cucumber-jvm-parallel-plugin</artifactId>
            <version>5.0.0</version>
        </dependency>
        
        <!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
    		<groupId>junit</groupId>
    		<artifactId>junit</artifactId>
    		<version>4.13.1</version>
    		<scope>test</scope>
		</dependency>

        <!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.19.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                	<skipTests>true</skipTests>
                	<testFailureIgnore>false</testFailureIgnore>
                	<!-- <parallel>classes</parallel>
                    <threadCount>1</threadCount> -->
                </configuration>
            </plugin>
            
            <plugin>
                <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-failsafe-plugin -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.0.0-M5</version>
                <configuration>
                <includes>
                    <include>**/com/automation/test/runner/TestRunner.java</include>
                </includes>
                <!-- <parallel>methods</parallel>
                <threadCount>1</threadCount> -->
                <forkCount>0</forkCount>
                <reuseForks>false</reuseForks>
                <argLine>-Duser.language=en</argLine>
                <argLine>-Xmx1024m</argLine>
                <argLine>-XX:MaxPermSize=256m</argLine>
                <argLine>-Dfile.encoding=UTF-8</argLine>
                <useFile>false</useFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
                        
            <plugin>
                <groupId>net.masterthought</groupId>
                <artifactId>maven-cucumber-reporting</artifactId>
                <version>5.4.0</version>
                <executions>
                    <execution>
                        <id>execution</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>generate</goal>
                        </goals>
                        <configuration>
                            <projectName>CucumberAutomation</projectName>
                            <skip>false</skip>
                            <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
                            <inputDirectory>${project.build.directory}</inputDirectory>
                            <jsonFiles>
                                <param>**/*.json</param>
                            </jsonFiles>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>